# solid_test

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
dip_01/: cargo.toml
dip_01/src/: main.rs
dip_02/: cargo.toml
dip_02/src/: main.rs
dip_03/: cargo.toml
dip_03/src/: main.rs
dip_04/: cargo.toml
dip_04/src/: main.rs
dip_05/: cargo.toml
dip_05/src/: main.rs
dip_05/src/adapters/: external.rs  in_memory.rs  mod.rs
dip_05/src/application/: mod.rs
dip_05/src/domain/: mod.rs
dip_05/src/ports/: mod.rs
dip_06/: cargo.toml
dip_06/src/: main.rs
dip_06/src/adapters/: external.rs  in_memory.rs  mod.rs
dip_06/src/application/: mod.rs
dip_06/src/domain/: mod.rs
docs/: notes.md
isp_01/: cargo.toml
isp_01/src/: main.rs
isp_02/: cargo.toml
isp_02/src/: main.rs
isp_03/: cargo.toml
isp_03/src/: main.rs
isp_04/: cargo.toml
isp_04/src/: main.rs
isp_05/: cargo.toml
isp_05/src/: main.rs
lsp_01/: cargo.toml
lsp_01/src/: main.rs
lsp_02/: cargo.toml
lsp_02/src/: main.rs
lsp_03/: cargo.toml
lsp_03/src/: main.rs
lsp_04/: cargo.toml
lsp_04/src/: main.rs
ocp_01/: cargo.toml
ocp_01/src/: main.rs
ocp_02/: cargo.toml
ocp_02/src/: main.rs
ocp_03/: cargo.toml
ocp_03/src/: main.rs
ocp_04/: cargo.toml
ocp_04/src/: main.rs
ocp_05/: cargo.toml
ocp_05/src/: main.rs
ocp_06/: cargo.toml
ocp_06/src/: main.rs
ocp_07/: cargo.toml
ocp_07/src/: main.rs
srp_01/: cargo.toml
srp_01/src/: main.rs
srp_02/: cargo.toml
srp_02/src/: main.rs
srp_03/: cargo.toml
srp_03/src/: main.rs
(+8 files in other folders)
