
[workspace]
members = [
    "srp_01",
    "srp_02",
    "srp_03",
    "ocp_01",
    "ocp_02",
    "ocp_03",
    "ocp_04",
    "ocp_05",
    "ocp_06",
    "ocp_07",
    "lsp_01",
    "lsp_02",
    "lsp_03",
    "lsp_04",
    "isp_01",
    "isp_02",
    "isp_03",
    "isp_04",
    "isp_05",
    "dip_01",
    "dip_02",
    "dip_03",
    "dip_04",
    "dip_05",
]
resolver = "3" # Read https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions

# Optional: default build profiles for all members
[profile.release]
# lto = true
# codegen-units = 1